# Engine

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Engine.sln  README.md  opengl.sln
Common/: Assets.cpp  Assets.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  CommonAPI.hpp  DynamicArray.hpp  Log.cpp  Log.hpp  MemAllocator.hpp  ResTools.cpp  ResTools.hpp  Return.hpp  Singleton.hpp  String.cpp  String.hpp  StringTools.cpp  StringTools.hpp  UniquePtr.hpp
Phycics_Engine/: Phycics_Engine.vcxproj  Phycics_Engine.vcxproj.filters
Phycics_Engine/src/: Behaviour.cpp  Behaviour.h  Mesh.h  Scene.cpp
Render_Engine/: Render_Engine.vcxproj  Render_Engine.vcxproj.filters
Render_Engine/Common/: Log.cpp  Log.h  RenderLib.cpp  RenderLib.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  UniformBuffer.cpp  UniformBuffer.h  libexport.h
Render_Engine/Phycics/: Behaviour.cpp  Behaviour.h  ClothBehaviour.cpp  ClothBehaviour.h  Collision.cpp  Collision.h  RigidBodyBehaviour.cpp  RigidBodyBehaviour.h  Scene.cpp  Scene.h  WaterBehaviour.cpp  WaterBehaviour.h
Render_Engine/Render/: Camera.cpp  Camera.h  Cloth.cpp  Cloth.h  Cube.cpp  Cube.h  DirectionalLight.h  Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Print.cpp  Print.h  Reactor.cpp  Reactor.h  Renderer.cpp  Renderer.h  RigidBody.cpp  RigidBody.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Water.cpp  Water.h
Render_Engine/src/: Cube.h  Entity.cpp  Entity.h  IndexBuffer.h  Light.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Plane.cpp  PointLight.h  Print.cpp  Print.h  Reactor.cpp  SkyBox.h  (+12 more)
cmake/: common.cmake
main/: Bunny_Jump.cpp  Cloth_Flow.cpp  Finite_Jump.cpp  Water_wave.cpp  main.cpp  main.vcxproj  main.vcxproj.filters  test.cpp  vecAdd.cl
opengl/: opengl.vcxproj  opengl.vcxproj.filters
test/: CMakeLists.txt  test_common.cpp  test_common.h  test_main.cpp  test_normal.cpp  test_normal.h
(+52 files in other folders)
